Fix PINNED routes handling. Before r291643, adding new interface prefix had the following logic: try_add:   EEXIST && (PINNED) {     try_del(w/o PINNED flag)     if (OK)       try_add(PINNED) }

In r291643, deletion was performed w/ PINNED flag held which leaded
  to new interface prefixes (like ::1) overriding older ones.
  Fix this by requesting deletion w/o RTF_PINNED.

PR:		kern/205285
Submitted by:	Fabian Keil <fk at fabiankeil.de>

Former-commit-id: 89ff76a955088aa95ed232a7e7566c648458deae